v3/utils.treedata.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [utils](./utils.md) &gt; [TreeData](./utils.treedata.md)

## TreeData class

树数据处理。支持单根节点、多根节点树数据。

<b>Signature:</b>

```typescript
export declare class TreeData<TNode extends TreeDataNode> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(data, options)](./utils.treedata._constructor_.md) |  | 构造函数。 |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [clone()](./utils.treedata.clone.md) |  | 克隆实例。 |
|  [export()](./utils.treedata.export.md) |  | 导出数据。 |
|  [findNode(predicate)](./utils.treedata.findnode.md) |  | 查找符合条件的第一个节点。 |
|  [findNodePath(predicate)](./utils.treedata.findnodepath.md) |  | 查找符合条件的第一个节点的路径。 |
|  [findNodePaths(predicate)](./utils.treedata.findnodepaths.md) |  | 查找符合条件的所有节点的路径。 |
|  [findNodes(predicate)](./utils.treedata.findnodes.md) |  | 查找符合条件的所有节点。 |
|  [omitNodeProps(propNames)](./utils.treedata.omitnodeprops.md) |  | 移除节点上指定的属性。 |
|  [pickNodeProps(propNames)](./utils.treedata.picknodeprops.md) |  | 选取节点上指定的属性。 |
|  [setDepth(depth)](./utils.treedata.setdepth.md) |  | 设置数据深度。从 <code>0</code> 开始，将会移除超过指定深度的数据。 |
|  [setNodeProps(props)](./utils.treedata.setnodeprops.md) |  | 设置节点属性。 |
|  [traverse(fn, searchMethod)](./utils.treedata.traverse.md) |  | 遍历。 |
|  [traverseBFS(fn)](./utils.treedata.traversebfs.md) |  | 广度优先遍历。 |
|  [traverseDFS(fn)](./utils.treedata.traversedfs.md) |  | 深度优先遍历。 |

